syntax = "proto3";

import "google/protobuf/timestamp.proto";

package recordsystem.user.v1;

option java_package = "com.recordsystem.user.v1";
option java_multiple_files = true;

service UserService {
  rpc get(UserRequest) returns (User);
}

message UserRequest {
  int64 id = 1;
}

message User {
  int64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  UserRole role = 6;
  google.protobuf.Timestamp created_at = 7;
}

enum UserRole {
  ADMIN = 0;
  USER = 1;
}

